--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,7 +8,7 @@
   <div data-equalizer class="cart-movie large-12 column mb1">
     <div class="column large-2 text-center p0" data-equalizer-watch>
       <%=link_to movie do%>
-        <%=image_tag image.url, class: "radius-l1"%>
+        <%=image_tag movie.image.url, class: "radius-l1"%>
       <%end%>
     </div>
     <div class="column large-7 glassy-bg text-center" data-equalizer-watch>
