--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,10 +4,8 @@
 <div class="large-9 small-12 column">
   <h3>
     <%= @movie.title %>
-    (<%= @movie.release_year %>)
-    <%=link_to @movie.imdb do%>
-      <%=image_tag asset_path("imdb_logo.png")%>
-    <%end%>
+    (<%= 'categoria' %>)
+
   </h3>
   <p class="label movie-label radius mb1">$ <%= @movie.price %></p>
 
