--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,20 +1,22 @@
-<div class="large-3 small-12 column">
-  <%=image_tag @movie.image.url%>
-</div>
-<div class="large-9 small-12 column">
-  <h3>
-    <%= @movie.title %>
-    (<%= 'categoria' %>)
+<div class="column beer-top">
+  <div class="large-3 small-12 column">
+    <%=image_tag @movie.image.url%>
+  </div>
+  <div class="large-9 small-12 column">
+    <h3>
+      <%= @movie.title %>
+      (<%= 'categoria' %>)
 
-  </h3>
-  <p class="label movie-label radius mb1">$ <%= @movie.price %></p>
+    </h3>
+    <p class="label movie-label radius mb1">$ <%= @movie.price %></p>
 
-  <p><%= @movie.description %></p>
+    <p><%= @movie.description %></p>
 
-  <%if signed_in?%>
-    <%=link_to "", class: "button", data: {target: @cart_action, addUrl: add_to_cart_path(@movie), removeUrl: remove_from_cart_path(@movie)} do%>
-      <i class="fi-shopping-cart"></i>
-      <span><%=@cart_action%></span> Cart
+    <%if signed_in?%>
+      <%=link_to "", class: "button", data: {target: @cart_action, addUrl: add_to_cart_path(@movie), removeUrl: remove_from_cart_path(@movie)} do%>
+        <i class="fi-shopping-cart"></i>
+        <span><%=@cart_action%></span> Cart
+      <%end%>
     <%end%>
-  <%end%>
+  </div>
 </div>
