--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,7 +8,9 @@
       (<%= 'categoria' %>)
 
     </h3>
-    <p class="label movie-label radius mb1">$ <%= @movie.price %></p>
+    <p class="label movie-label radius mb1">
+      <%= (current_user && current_user.purchase?(@movie)) ? "Purchased" : "$#{@movie.price}" %>
+    </p>
 
     <p><%= @movie.description %></p>
 
